--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<html> < ! -This is how you comment in HTML->
+<html>
   <img src="img/1_header.png" style="width:500px">
   <body style="background-color: #fafaf7; font-family:'Courier New'">
     <h1 style="font-size: 4rem; color: #070807">Woof! Welcome to DoubleDog, Inc.</h1>
