--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-
+---
+layout: page
+---
 <html>
   <img src="img/1_header.png" style="width:500px">
   <body style="background-color: #fafaf7; font-family:'Courier New'">
